@@ -4,8 +4,6 @@ import com.standard.domain.Category;
 import com.standard.entity.CategoryEntity;
 import com.standard.function.JpaFunctions;
 
-import java.util.stream.Collectors;
-
 public class CategoryToCategoryEntityFunction implements java.util.function.Function<CategoryEntity, Category> {
 
     @Override
@@ -17,7 +15,7 @@ public class CategoryToCategoryEntityFunction implements java.util.function.Func
             output.setDescription(input.getDescription());
             output.setStatus(input.getStatus() != null ? input.getStatus().name() : "");
             if (input.getSubcategories() != null) {
-                output.setSubcategories(input.getSubcategories().stream().map(JpaFunctions.subcategoryToSubCategoryEntity).collect(Collectors.toList()));
+                output.setSubcategories(input.getSubcategories().stream().map(JpaFunctions.subcategoryToSubCategoryEntity).toList());
             }
         }
         return output;
