@@ -17,24 +17,26 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
-public class CategoryServiceImpl implements CategoryService {
+public class CategoryServiceImpl implements CategoryService
+{
 
 	private final CategoryRepository repository;
 	private final SubcategoryRepository subcategoryRepository;
 
 	@Override
 	@Transactional
-	public Category create(Category obj) {
+	public Category create(Category obj)
+	{
 		CategoryEntity categoryDB = new CategoryEntity();
 		categoryDB.setDescription(obj.getDescription());
 		categoryDB.setName(obj.getName());
-		if(obj.getSubcategories() != null) {
+		if (obj.getSubcategories() != null) {
 			Set<SubcategoryEntity> subcategories = new HashSet<>();
-			obj.getSubcategories().forEach(sub -> subcategories.add(subcategoryRepository.getOne(sub.getId())));
+			obj.getSubcategories()
+					.forEach(sub -> subcategories.add(subcategoryRepository.findById(sub.getId()).orElseThrow(() -> new EntityNotFoundException("Subcategory não encontrada"))));
 			categoryDB.setSubcategories(subcategories);
 		}
 		return JpaFunctions.categoryToCategoryEntity.apply(repository.saveAndFlush(categoryDB));
@@ -42,13 +44,14 @@ public class CategoryServiceImpl implements CategoryService {
 
 	@Override
 	@Transactional
-	public Category update(Long id, Category obj) {
+	public Category update(Long id, Category obj)
+	{
 		CategoryEntity categoryDB = repository.findById(id).orElseThrow(() -> new EntityNotFoundException("Registro não encontrado!"));
 		Objects.requireNonNull(categoryDB).setDescription(obj.getDescription());
 		categoryDB.setName(obj.getName());
 		categoryDB.getSubcategories().clear();
 		Set<SubcategoryEntity> subcategoriaSet = new HashSet<>();
-		obj.getSubcategories().forEach(sub -> subcategoriaSet.add(subcategoryRepository.getOne(sub.getId())));
+		obj.getSubcategories().forEach(sub -> subcategoriaSet.add(subcategoryRepository.findById(sub.getId()).orElseThrow(() -> new EntityNotFoundException("Subcategory não encontrada!"))));
 		categoryDB.getSubcategories().addAll(subcategoriaSet);
 
 		return JpaFunctions.categoryToCategoryEntity.apply(repository.saveAndFlush(categoryDB));
@@ -57,25 +60,25 @@ public class CategoryServiceImpl implements CategoryService {
 	@Override
 	@Transactional(readOnly = true)
 	@Cacheable(cacheNames = "categoryCache", key = "#id", condition = "#showInventoryOnHand == false")
-	public Category findById(Long id) {
-		return JpaFunctions.categoryToCategoryEntity.apply(repository.findById(id)
-				.orElseThrow(() -> new EntityNotFoundException("Registro não encontrado!")));
+	public Category findById(Long id)
+	{
+		return JpaFunctions.categoryToCategoryEntity.apply(repository.findById(id).orElseThrow(() -> new EntityNotFoundException("Registro não encontrado!")));
 	}
 
 	@Override
 	@Transactional(readOnly = true)
 	@Cacheable(cacheNames = "categoryListCache", condition = "#showInventoryOnHand == false")
-	public List<Category> findAll() {
-		return repository.findAll().stream().map(JpaFunctions.categoryToCategoryEntity).collect(Collectors.toList());
+	public List<Category> findAll()
+	{
+		return repository.findAll().stream().map(JpaFunctions.categoryToCategoryEntity).toList();
 	}
 
 	@Override
 	@Transactional
-	public void delete(Long id) {
-		CategoryEntity categoryDB = repository.getOne(id);
-		if(categoryDB != null) {
-			categoryDB.setStatus(StatusEnum.DISABLE);
-		}
+	public void delete(Long id)
+	{
+		CategoryEntity categoryDB = repository.findById(id).orElseThrow(() -> new EntityNotFoundException("Registro não encontrado!"));
+		categoryDB.setStatus(StatusEnum.DISABLE);
 		repository.saveAndFlush(categoryDB);
 	}
 
