@@ -13,7 +13,6 @@ import org.springframework.transaction.annotation.Transactional;
 import javax.persistence.EntityNotFoundException;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -33,7 +32,7 @@ public class DomainServiceImpl implements DomainService {
 	@Override
 	@Transactional
 	public Domain update(Long id, Domain domain) {
-		DomainEntity domainDB = domainRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Registro não encontrado!"));
+		DomainEntity domainDB = domainRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Domain não encontrado!"));
 		Objects.requireNonNull(domainDB).setDescription(domain.getDescription());
 		domainDB.setName(domain.getName());
 		return JpaFunctions.domainToDomainEntity.apply(domainRepository.save(domainDB));
@@ -42,25 +41,23 @@ public class DomainServiceImpl implements DomainService {
 	@Override
 	@Transactional
 	public void delete(Long id) {
-		DomainEntity domainDB = domainRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Registro não encontrado!"));
-		if(domainDB != null) {
-			domainDB.setStatus(StatusEnum.DISABLE);
-		}
-		domainRepository.save(domainDB);
+		DomainEntity domainDB = domainRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Domain não encontrado!"));
+		domainDB.setStatus(StatusEnum.DISABLE);
+		domainRepository.saveAndFlush(domainDB);
 	}
 
 	@Override
 	@Transactional(readOnly = true)
 	@Cacheable(cacheNames = "domainListCache", condition = "#showInventoryOnHand == false")
 	public List<Domain> findAll() {
-		return domainRepository.findAll().stream().map(JpaFunctions.domainToDomainEntity).collect(Collectors.toList());
+		return domainRepository.findAll().stream().map(JpaFunctions.domainToDomainEntity).toList();
 	}
 
 	@Override
 	@Transactional(readOnly = true)
 	@Cacheable(cacheNames = "domainCache", key = "#id", condition = "#showInventoryOnHand == false")
 	public Domain findById(Long id) {
-		return JpaFunctions.domainToDomainEntity.apply(domainRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Registro não encontrado!")));
+		return JpaFunctions.domainToDomainEntity.apply(domainRepository.findById(id).orElseThrow(() -> new EntityNotFoundException("Domain não encontrado!")));
 	}
 
 }
